tests/samples/negative/types/const_initializer_binary_expr.ax
module const_initializer_binary_expr;

const VALUE: bool = true && false;

fn main() -> i32 {
  if VALUE {
    return 1;
  }
  return 0;
}
